--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,7 @@
 [deps]
+CSVFiles = "5d742f6a-9f54-50ce-8119-2520741973ca"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Mimi = "e4e893b0-ee5e-52ea-8111-44b3bdec128c"
 MimiDICE2013 = "98fa84f0-42a6-11e9-254c-d7945e8c710f"
 MimiFAIR = "73d86c50-c5fa-11e9-3497-c3dc913e627a"
@@ -6,3 +9,4 @@ MimiFUND = "b3ba11de-429f-11e9-29f7-cb478ab96e7c"
 MimiHECTOR = "331d1d40-c5fb-11e9-3214-23d1bf921302"
 MimiMAGICC = "d8247850-c5fc-11e9-2c04-d1198f4450c4"
 MimiSNEASY = "3f1801d0-c5f8-11e9-1568-bf13fd643260"
+RobustAdaptiveMetropolisSampler = "2f96e190-b8a6-11e9-0b3d-5fbd22c21613"
